# c2fastlog

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Logger.h  README.md  README_CN.md  check_and_format.sh
c2Common/: Date.h  Utils.h
c2Common/c2FastLog/: C2Spdlog.h  Common.h  FastLog.h  Logger.h  Packer.h
c2Common/queue/: VariableQueue.h
cmake/: c2fastlogConfig.cmake.in
example/: bench.cpp  benchmark.cpp  main.cpp
include/: c2_common.h  c2_fastlog.h  c2_logger.h  c2_packer.h  c2_spdlog.h  c2_variable_queue.h  utils.h
